--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.5.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.0.8",
+    "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
